--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "shetabit/payment": "^5.2"
+        "shetabit/payment": "^5.2",
+      "ext-soap": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
