--- a/.env.example
+++ b/.env.example
@@ -58,3 +58,7 @@ VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 L5_SWAGGER_GENERATE_ALWAYS=true
+
+SMS_PANEL_USERNAME=""
+SMS_PANEL_PASSWORD=""
+SMS_PANEL_NUMBER=""
