--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "ext-soap": "*",
+        "league/flysystem-aws-s3-v3": "^3.0",
         "darkaonline/l5-swagger": "^8.5",
         "guzzlehttp/guzzle": "^7.7",
         "laravel/framework": "^10.10",
