--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "league/flysystem-aws-s3-v3": "^3.0",
+        "morilog/jalali": "^3.4",
+        "pusher/pusher-php-server": "^7.2",
         "shetabit/payment": "^5.2"
     },
     "require-dev": {
